Subo el proyecto a GitHub

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
        ../../../../.IdeaIC2016/
         ../../../../.VirtualBox/
         ../../../../.android/
+		metadata/
+		RemoteSystemsTempFiles/
         ../../../../.bash_history
         ../../../../.cisco/
         ../../../../.eclipse/
